@@ -15,6 +15,9 @@ xine-lib (1.1.7) (unreleased)
   * Document dvba: MRLs (ATSC with full tuning info).
   * Fix VCD playback (broken since 1.1.4).
   * Fix demuxing of FLAC files with ID3v2 tags.
+  * Use the integer versions of Speex decoding functions, this avoids an
+    iteration over the decoded frames to transform them to integers, and
+    also avoids an improper saturation.
 
 xine-lib (1.1.6)
   * Split the DirectFB plugin into X11 and non-X versions.
